05_PostCSSでより実践的なCSSローダーを作成しよう。（Loader編２）

--- a/contents/src/app.scss
+++ b/contents/src/app.scss
@@ -1,8 +1,10 @@
 h1 {
   font-size: 2em;
   color: blue;
+  transition: all .3s;
 
   &:hover {
+    transform: translateX(50px);
     color: red;
   }
 }
