--- a/contents/src/app.scss
+++ b/contents/src/app.scss
@@ -8,3 +8,13 @@ h1 {
     color: red;
   }
 }
+
+.bg {
+  // background-image: url('~images/favicon.png');
+  // or @imgs
+  // background-image: url('~@imgs/favicon.png');
+  background-image: url('./images/favicon.png');
+  background-size: cover;
+  width: 100px;
+  height: 100px;
+}
